Fix full width image aspect ratio on small screens

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -109,6 +109,7 @@ a {
     align-self: center;
     margin: auto;
     display: block;
+    height: auto;
 }
 /*End Wagtail Rich Text image classes*/
 
